--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@
     margin: 0;
   }
   header {
+    display: flex;
+    justify-content: space-between;
     background: #1f2937;
     height: 300px;
     padding-top: 10px;
@@ -28,15 +30,19 @@
   }
   h2 {
     text-align: left;
+    font-size: large;
     font-weight: 1000;
     color: white;
     line-height: 50px;
-    margin: 0;
+    margin-right: 175px;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
   a {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 100;
-    padding-left: 18px;
+    padding-top: 15px;
+    
 
     text-align: right;
     color: white;
